added difficulty rating to projects

--- a/assignments/index.html
+++ b/assignments/index.html
@@ -21,6 +21,7 @@ redirect_from:
         <div class="card-body">
           <h4 class="card-title">{{ asst.title }}</h4>
           <p class="card-text">{{ asst.summary }}</p>
+          <small class="tag">{{ asst.difficulty }}</small>
           {% if asst.java %}
             <small class="language-tag">Java</small>
           {% endif %}
