--- a/assignments/index.html
+++ b/assignments/index.html
@@ -21,7 +21,15 @@ redirect_from:
         <div class="card-body">
           <h4 class="card-title">{{ asst.title }}</h4>
           <p class="card-text">{{ asst.summary }}</p>
-          <small class="tag">{{ asst.difficulty }}</small>
+          {% if asst.difficulty == "easier" %}
+            <small class="difficulty-tag"  background-color="37FD12">"Easier"</small>
+          {% elif asst.difficulty == "more difficult" %}
+            <small class="difficulty-tag"  background-color="FFF04D">"More Difficult"</small>
+          {% elif asst.difficulty == "most difficult" %}
+            <small class="difficulty-tag"  background-color="FF0000">"Most Difficult"</small>
+          {% else %}
+            <small class="tag">"Difficulty Not Set"</small>
+          {% endif %}
           {% if asst.java %}
             <small class="language-tag">Java</small>
           {% endif %}
