--- a/assignments/index.html
+++ b/assignments/index.html
@@ -23,12 +23,12 @@ redirect_from:
           <p class="card-text">{{ asst.summary }}</p>
           {% if asst.difficulty == "easier" %}
             <small class="difficulty-tag"  style="background-color:37FD12">"Easier"</small>
-          {% elif asst.difficulty == "more difficult" %}
+          {% endif %}
+          {% if asst.difficulty == "more difficult" %}
             <small class="difficulty-tag"  style="background-color:FFF04D">"More Difficult"</small>
-          {% elif asst.difficulty == "most difficult" %}
+          {% endif %}
+          {% if asst.difficulty == "most difficult" %}
             <small class="difficulty-tag"  style="background-color:FF0000">"Most Difficult"</small>
-          {% else %}
-            <small class="tag">"Difficulty Not Set"</small>
           {% endif %}
           {% if asst.java %}
             <small class="language-tag">Java</small>
